--- a/images/style.css
+++ b/images/style.css
@@ -1,12 +1,21 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 header {
+    width: 100%;
+    margin-top: 0px;
     display: flex;
     justify-content: space-between;
+    
 }
 header img{
     width: 95px;
     height: 30px;
+    
     margin-top: 52px;
     margin-left: 54px;
+    
 }
 .menu ul{
     display: flex;
@@ -21,4 +30,12 @@ header img{
 .menu a{
     text-decoration: none;
     color: black;
+}
+.menu a:visited {
+    color: #0065FC;
+}
+.menu a:hover {
+    color: #0065FC;
+    border-top: 2px solid #0065FC;
+    padding-top: 52px;
 }
