--- a/images/style.css
+++ b/images/style.css
@@ -2,40 +2,43 @@ body {
     margin: 0;
     padding: 0;
 }
-header {
+.header {
     width: 100%;
     margin-top: 0px;
     display: flex;
     justify-content: space-between;
-    
 }
-header img{
+.header__logo{
+}
+.header__logo img{
     width: 95px;
     height: 30px;
-    
     margin-top: 52px;
     margin-left: 54px;
     
 }
-.menu ul{
+.header__nav{
+}
+.header__nav ul{
     display: flex;
     margin-right: 78px;
     margin-top: 52px;
     list-style-type: none;
     flex-wrap: wrap;
 }
-.menu li{
+.header__nav li{
     margin-left: 70px;
 }
-.menu a{
+.header__nav a{
     text-decoration: none;
     color: black;
-}
-.menu a:visited {
+}                                       
+.header__nav a:visited {
     color: #0065FC;
 }
-.menu a:hover {
-    color: #0065FC;
-    border-top: 2px solid #0065FC;
-    padding-top: 52px;
+.header__nav a:hover {
+color: #0065FC;
+border-top: 3px solid #0065FC;
+padding-top: 50px;
 }
+
