--- a/style.css
+++ b/style.css
@@ -126,6 +126,37 @@ padding-top: 50px;
         width: 50%;
         border-bottom: 2px solid #f2f2f2;
     } 
+    .search{
+        width: 100%;
+        display: flex;
+    }
+    .search i{ 
+        font-size: 1.2em;
+        margin-left: 2px;       
+        border-radius: 15px 0px 0px 15px;
+        width: 52px;
+        height: 52px;
+        background-color: #f2f2f2;        
+        line-height: 50px;
+        text-align: center;
+    }
+    .search input {
+        border: 1px solid #f2f2f2;
+        font-weight: bold;
+        font-size: 1.05em;
+        
+    }
+    .search input:focus {
+        border: 1px solid #f2f2f2;
+        outline: none;
+    }
+    .search button {
+        border: none;
+        background-color :#0065FC;
+        color: white;
+        font-size: 1.2em;
+        border-radius: 0px 15px 15px 0px;
+    }
     
 }
 /************TABLETTE************/
