--- a/style.css
+++ b/style.css
@@ -125,10 +125,22 @@ padding-top: 50px;
         text-align: center;        
         width: 50%;
         border-bottom: 2px solid #f2f2f2;
+    }
+    .premierParagraphe{
+        margin-top: 36px;
+        margin-right: 66px;
+        margin-left: 21px;
+        
     } 
+    .premierParagraphe p:nth-child(1){
+        font-size: 22px;
+        margin-bottom: 16px;
+    }
     .search{
         width: 100%;
         display: flex;
+        margin-left: 21px;
+        margin-right: 21px;
     }
     .search i{ 
         font-size: 1.2em;
@@ -141,9 +153,12 @@ padding-top: 50px;
         text-align: center;
     }
     .search input {
+        padding-left: 16px;
         border: 1px solid #f2f2f2;
         font-weight: bold;
         font-size: 1.05em;
+        width: 230px;
+        margin-right: -20px;
         
     }
     .search input:focus {
@@ -155,7 +170,8 @@ padding-top: 50px;
         background-color :#0065FC;
         color: white;
         font-size: 1.2em;
-        border-radius: 0px 15px 15px 0px;
+        border-radius: 16px;
+        width: 51px;
     }
     
 }
