--- a/style.css
+++ b/style.css
@@ -243,27 +243,57 @@ h2 {
     }
 }
 /************TABLETTE************/
-@media  screen and (min-width: 866px) and (max-width: 1266px) {
+@media  screen and (min-width: 866px) and (max-width: 1366px) {
     body {
         width: 100%;
         margin: auto;
     }
-    .header {
-       width: 100%;
-       border: 1px solid green;
+    .header__logo img {
+        margin-top: 35px;
+        margin-left: 10px;
     }
+    .header__nav ul{
+        margin-right: 30px;
+    }
+    
+
+   
+    
     .tablette {
         display: flex;
-        border: 1px solid red;
         justify-content: space-between;
+        margin-top: 10px
     }
+    .premierParagraphe {
+        font-size: 0.75em;
+        margin-left: 10px;
+        padding-top: 0;
+        
+        
+
+    }
+    h1 {
+        margin: 0;
+    }
+    h2 {
+        font-size: 1.2em;
+    }
+    
     .search {
-        width: 330px;
+        margin: 0;
+        width: 380px;
         height: 51px;
+        margin-right: 30px;
         
     }
     .btn {
         display: none;
+    }
+    .search i {
+        width: 51px;
+    }
+    .search input {
+        width: 80%;
     }
     
     .search .loupe {
