--- a/style.css
+++ b/style.css
@@ -127,6 +127,42 @@ h2 {
 .loupe{    /*cache l'icone loupe*/
     display: none;
 }
+.filters {
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: bold;
+    margin-left: 63px;
+    margin-top: 31px;
+}
+.filters p {
+    margin-right: 30px;
+}
+.btnFilters {
+    display: flex;
+    flex-wrap: wrap;
+}
+.btnBox {
+    height: 48px;
+    border: 2px solid #d9d9d9;
+    border-radius: 25px;
+    border-left: transparent;
+    margin-right: 24px;
+    padding-right: 22px;
+    
+    
+}
+.btnBox i{   
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 51px;
+    color: #0065fc;
+    background-color: #DEEBFF ;
+    border-radius: 50%;
+    margin-top: -1px;
+    margin-right: 13px;
+}
 
 /*************************SMARTPHONE****************************/
 @media  screen and (min-width: 350px) and (max-width : 865px){    
