--- a/style.css
+++ b/style.css
@@ -151,6 +151,11 @@ h2 {
     
     
 }
+.btnBox:hover {
+    font-style: oblique;
+    background-color: #DEEBFF;
+    border: 1px solid #DEEBFF;
+}
 .btnBox i{   
     width: 50px;
     height: 50px;
@@ -162,6 +167,7 @@ h2 {
     border-radius: 50%;
     margin-top: -1px;
     margin-right: 13px;
+    margin-left: -2px;
 }
 
 /*************************SMARTPHONE****************************/
