--- a/style.css
+++ b/style.css
@@ -148,13 +148,21 @@ h2 {
     border-left: transparent;
     margin-right: 24px;
     padding-right: 22px;
+    transition :  ease-in-out 0.5s;
+    
+
     
     
 }
 .btnBox:hover {
     font-style: oblique;
     background-color: #DEEBFF;
-    border: 1px solid #DEEBFF;
+    border: 2px solid #DEEBFF;
+    margin-right: 22px;
+    font-size: 1.2em;
+
+    
+    
 }
 .btnBox i{   
     width: 50px;
