--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ h2 {
     background-color: #DEEBFF;
     border: 2px solid #DEEBFF;
     margin-right: 22px;
+    color: #0065fc;
     
 
     
@@ -173,6 +174,7 @@ h2 {
     margin-top: -1px;
     margin-right: 13px;
     margin-left: -2px;
+    
 }
 
 /*************************SMARTPHONE****************************/
