--- a/style.css
+++ b/style.css
@@ -176,6 +176,25 @@ h2 {
     margin-left: -2px;
     
 }
+.i {
+    margin-left: 63px;
+    display: flex;
+    align-items: center;
+    
+     
+}
+.i i{
+    width: 24px;
+    height: 24px;    
+    color :#0065fc;
+    font-size: 0.75em;
+    border: 1px solid #f2f2f2;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 22px;
+    margin-right: 12px;
+    
+}
 
 /*************************SMARTPHONE****************************/
 @media  screen and (min-width: 350px) and (max-width : 865px){    
@@ -305,8 +324,28 @@ h2 {
         margin-bottom: 16px;
     }
     .btnBox:hover {
-        margin-right: 10px;
+        margin-right: 8px;
+
     }
+    .i {
+        margin: 0;
+        padding: 0;
+        margin-left: 20px;
+        
+    }
+    .i i {
+        position: absolute;
+        line-height: auto;
+        align-items: baseline;
+        align-self: flex-start;
+        
+        
+    }
+    .i p {
+        margin-left: 36px;
+        margin-top: 4px;
+    }
+    
 
 }
 /************TABLETTE************/
@@ -380,5 +419,19 @@ h2 {
         margin-right: 0;
 
        
+    }
+    .filters {
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+
+    }
+    .btnBox {
+        height: 38px;
+    }
+    .btnBox i{
+        height: 40px;
+        width: 40px;
+        line-height: 40px;
     }
 }
