--- a/style.css
+++ b/style.css
@@ -195,6 +195,41 @@ h2 {
     margin-right: 12px;
     
 }
+.accomodation {
+    width: 878px;
+    height: 628px;
+    margin-left: 50px;
+    background-color: #f2f2f2;
+    border-radius: 20px;
+    position: absolute;
+    
+}
+.accomodation h1 {
+    
+    margin-top: 46px;
+    margin-left: 41px;
+}
+.accomodation__container {
+    
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 40px;
+    margin-right: 40px;
+
+}
+.vignette__container {
+    margin: auto;
+    margin-top: 22px;
+    width: 245px;
+    height: 200px;
+    background-color: white;
+    border-radius: 20px;
+}
+.accomodation h2 {
+    margin-top: 42px;
+    margin-left: 41px;
+    font-weight: bold;
+}
 
 /*************************SMARTPHONE****************************/
 @media  screen and (min-width: 350px) and (max-width : 865px){    
