--- a/style.css
+++ b/style.css
@@ -155,8 +155,9 @@ h2 {
     font-style: oblique;
     background-color: #DEEBFF;
     border: 2px solid #DEEBFF;
-    margin-right: 22px;
+    margin-right: 24px;
     color: #0065fc;
+    margin-left: -2px;
     
 
     
@@ -192,49 +193,52 @@ h2 {
     border-radius: 50%;
     text-align: center;
     line-height: 22px;
-    margin-right: 12px;
-    
+    margin-right: 12px;    
 }
 .accomodation {
     
-    width: 878px;
-    height: 628px;
+    height: auto;
+    max-width: 878px;    
     margin-left: 50px;
     margin-top: 32px;
     background-color: #f2f2f2;
     border-radius: 20px;
-    position: absolute;
+  
     
+}.accomodation a {
+    text-decoration: none;
+    color :black
 }
 .accomodation h1 {
-    
-    margin-top: 46px;
+    display: inline-block;        
     margin-left: 41px;
+    margin-top: 42px;
+
+    
 }
 .accomodation__container {
-    
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 40px;
-    margin-right: 40px;
+    display: flex;    
+    flex-wrap: wrap;    
+    justify-content: center;
 
 }
 .vignette__container {
-    margin: auto;
-    margin-top: 22px;
+    margin-left: 15px;
+    margin-bottom: 30px;
+    margin-right: 15px;
     width: 245px;
     height: 200px;
     background-color: white;
     border-radius: 20px;
 }
-.vignette__container a {
-    text-decoration: none;
-}
+
 .vignette__container a:visited {
     color: black;
 }
 .accomodation h2 {
-    margin-top: 42px;
+    display: inline-block;
+    margin-top: 12px;
+    margin-bottom: 45px;
     margin-left: 41px;
     font-weight: bold;
 }
@@ -274,6 +278,9 @@ h2 {
     margin-left: 3px;
     color: #f2f2f2;
 }
+
+
+
 
 /*************************SMARTPHONE****************************/
 @media  screen and (min-width: 350px) and (max-width : 865px){    
@@ -471,6 +478,7 @@ h2 {
         width: 380px;
         height: 51px;
         margin-right: 30px;
+        margin-top: -8px;
         
     }
     .btn {
