--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@
 /**********FIN404***************/
 body {
     font-family: 'Raleway', sans-serif;
+    font-size: 1em;
+    width: 100%;
+    margin: auto;
     margin-top: 0;
     padding: 0;
 }
@@ -33,7 +36,7 @@ body {
 
 .header__logo img{
     width: 95px;
-    height: 40px;
+    height: 45px;
     margin-top: 44px;
     margin-left: 54px;
     
@@ -48,7 +51,7 @@ body {
 .header__nav ul{
     display: flex;
     margin-right: 78px;
-    margin-top: 46px;
+    margin-top: 50px;
     list-style-type: none;
     flex-wrap: wrap;
 }
@@ -63,7 +66,7 @@ body {
 .header__nav a:active {
     color: #0065FC;
     border-top: 3px solid #0065FC;
-    padding-top: 44px;
+    padding-top: 47px;
 
 }
 .premierParagraphe{
@@ -79,6 +82,7 @@ h1 {
 }
 h2 {
     font-weight: normal;
+    margin-top: -5px;
     font-size: 1em;
 }
 
@@ -93,8 +97,8 @@ h2 {
 .search i{ 
     font-size: 1.2em;              
     border-radius: 15px 0px 0px 15px;
-    width: 52px;
-    height: 52px;
+    width: 50px;
+    height: 50px;
     background-color: #f2f2f2;        
     line-height: 50px;
     text-align: center;
@@ -122,7 +126,7 @@ h2 {
     border-radius: 0px 15px 15px 0px;
     color: white;
     background-color: #0065fc;
-    font-size: 1.05em;
+    font-size: 1.1em;
 }
 .loupe{    /*cache l'icone loupe*/
     display: none;
@@ -178,6 +182,7 @@ h2 {
     
 }
 .i {
+    margin-top: 20px;
     margin-left: 63px;
     display: flex;
     align-items: center;
@@ -227,9 +232,23 @@ h2 {
     margin-bottom: 30px;
     margin-right: 15px;
     width: 245px;
-    height: 200px;
+    
     background-color: white;
     border-radius: 20px;
+}
+.vignette__container ul {
+    color: #0065FC;
+    display: flex;    
+    margin-top: 0;
+    padding-left: 0;
+    margin-left: 16px;
+}
+.vignette__container li {
+    list-style-type: none;
+    font-size: 0.7em;
+}
+.vignette__container li:last-child {
+    color: #f2f2f2;
 }
 
 .vignette__container a:visited {
