--- a/style.css
+++ b/style.css
@@ -48,9 +48,10 @@ body {
    color: #0065FC;
    font-weight: bold;
 }
+
 .header__nav ul{
     display: flex;
-    margin-right: 78px;
+    margin-right: 75px;
     margin-top: 50px;
     list-style-type: none;
     flex-wrap: wrap;
@@ -70,17 +71,17 @@ body {
 
 }
 .premierParagraphe{
-    margin-top: 36px;
-    margin-left: 54px;
+    margin-top: 35px;
+    margin-left: 53px;
     width: auto;
     
     
 }
-h1 {
+.premierParagraphe h1 {
     font-size: 1.35em;
     
 }
-h2 {
+.premierParagraphe h2 {
     font-weight: normal;
     margin-top: -5px;
     font-size: 1em;
@@ -88,9 +89,9 @@ h2 {
 
 .search {    
 
-    margin-top: 22px;
+    margin-top: 18px;
     display: flex;
-    margin-left: 52px;
+    margin-left: 55px;
     width: 420px;
     
 }
@@ -113,6 +114,7 @@ h2 {
 }
 .search input::placeholder {
     color: black;
+    font-size: 18px;
     opacity: 1;
 }
 .search input:focus {
@@ -120,13 +122,15 @@ h2 {
     outline: none;
 }
 .search button {
-    width: 133px;
+    cursor: pointer;
+    width: 134px;
+    height: 51px;
     margin-left: 6px;
     border: none;
     border-radius: 0px 15px 15px 0px;
     color: white;
     background-color: #0065fc;
-    font-size: 1.1em;
+    font-size: 1.18em;
 }
 .loupe{    /*cache l'icone loupe*/
     display: none;
@@ -136,22 +140,23 @@ h2 {
     flex-wrap: wrap;
     font-weight: bold;
     margin-left: 63px;
-    margin-top: 31px;
+    margin-top: 30px;
 }
 .filters p {
-    margin-right: 30px;
+    margin-right: 37px;
 }
 .btnFilters {
     display: flex;
     flex-wrap: wrap;
 }
 .btnBox {
-    height: 48px;
+    height: 46px;
     border: 2px solid #d9d9d9;
     border-radius: 25px;
     border-left: transparent;
-    margin-right: 24px;
+    margin-right: 22px;
     padding-right: 22px;
+    font-size: 18px;
        
     
 }
@@ -170,20 +175,20 @@ h2 {
 .btnBox i{   
     width: 50px;
     height: 50px;
-    font-size: 18px;
+    font-size: 19px;
     text-align: center;
     line-height: 51px;
     color: #0065fc;
     background-color: #DEEBFF ;
     border-radius: 50%;
-    margin-top: -1px;
+    margin-top: -2px;
     margin-right: 13px;
     margin-left: -2px;
     
 }
 .i {
-    margin-top: 20px;
-    margin-left: 63px;
+    margin-top: 22px;
+    margin-left: 58px;
     display: flex;
     align-items: center;
     
@@ -203,9 +208,10 @@ h2 {
 .accomodation {
     
     height: auto;
+    min-height: 625px ;
     max-width: 878px;    
-    margin-left: 50px;
-    margin-top: 32px;
+    margin-left: 52px;
+    margin-top: 22px;
     background-color: #f2f2f2;
     border-radius: 20px;
   
@@ -215,9 +221,10 @@ h2 {
     color :black
 }
 .accomodation h1 {
-    display: inline-block;        
-    margin-left: 41px;
+    display: inline-block;/*pour appliquer une marge*/   
+    margin-left: 38px;
     margin-top: 42px;
+    font-size: 22px;
 
     
 }
@@ -230,9 +237,7 @@ h2 {
 .vignette__container {
     margin-left: 15px;
     margin-bottom: 30px;
-    margin-right: 15px;
-    width: 245px;
-    
+    margin-right: 15px;       
     background-color: white;
     border-radius: 20px;
 }
@@ -256,39 +261,43 @@ h2 {
 }
 .accomodation h2 {
     display: inline-block;
+    font-size: 18px;
     margin-top: 12px;
     margin-bottom: 45px;
     margin-left: 41px;
     font-weight: bold;
 }
 .vignette {
-    height: 184px;
-    width: 234px;
+    height: 190px;
+    width: 236px;
     margin : 5px ;
     overflow: hidden;
     
 }
-.vignette img {
-    
-    width: 234px;
-    height: 114px;
+.vignette img {    
+    width: 236px;
+    height: 118px;
     border-radius: 20px 20px 0px 0px;
 }
 .vignette h2 {
     margin: 0;
-    margin-top: 12px;
-    margin-left: 16px;
+    font-size: 16px;
+    margin-top: 6px;
+    margin-left: 8px;
 }
 .vignette p {
     margin: 0;
-    margin-left: 16px;
+    font-size: 14px;
+    margin-top: 4px;
+    margin-left: 8px;
    
 }
 .stars {
     display: flex;
-    font-size: 0.7em;
-    margin-left: 16px;
-    margin-top: 2px;
+    font-size: 0.65em;
+    margin-left: 10px;
+    margin-top: 8px;
+    
 }
 .blueStars {
     color: #0065FC;
@@ -316,8 +325,8 @@ h2 {
     .header__logo img{
         margin: 0;
         padding: 0;
-        padding-left: 21px;
-        padding-top: 21px;
+        padding-left: 20px;
+        padding-top: 22px;
         margin-bottom: 7px;
     }
     .header__nav {        
@@ -344,8 +353,8 @@ h2 {
     .header__nav ul li:nth-child(3){
         order: -2;
         text-align: end;
-        padding-right: 20px;        
-        margin-top: -35px;
+        padding-right: 21px;        
+        margin-top: -37px;
         
             
     }
@@ -353,12 +362,12 @@ h2 {
         margin-right: 50%;
         margin-top: 20px;
         border-bottom: 2px solid #f2f2f2;
-        padding-bottom: 16px;
+        padding-bottom: 14px;
 
     }
     .header__nav li:nth-child(2){
         margin-top: -37px;
-        padding-bottom: 16px;
+        padding-bottom: 14px;
         border-bottom: 2px solid #f2f2f2;
     }
     .header__nav li:nth-child(1):active{
@@ -367,25 +376,27 @@ h2 {
     .header__nav li:nth-child(2):active{
         border-bottom: 2px solid #0065FC;
     }
+     .premierParagraphe{
+        
+        margin-top: 32px;
+        margin-right: 66px;
+        margin-left: 21px;        
+    }     
     
-    
-    
-    h1 {
-        font-size: 1.25em;
+    .premierParagraphe h1 {
+        font-size: 1.3em;
+        margin: 0;
+        padding: 0;
         
     }
-    h2 {
+    .premierParagraphe h2 {
+        margin-top: 12px;
         font-size: 0.98em;
         
     }
     
     
-    .premierParagraphe{
-        
-        margin-top: 55px;
-        margin-right: 66px;
-        margin-left: 21px;        
-    } 
+   
     .search {
         width: 330px;
         margin-top: 35px;
@@ -415,18 +426,25 @@ h2 {
        
     }
     .filters {
-    margin: 0;    
+    margin-top: 18px;  
+    margin-left: 2px;
+    font-size: 1.1em;
+    margin-bottom: 22px;
     }
     .filters p {
         margin-left: 20px;
     }
     .btnFilters {
         margin-left: 20px;
+        margin-top: -2px;
     }
     .btnBox {
+
+        font-size: 16px;
         margin-right: 10px;
         margin-left: -2px;
-        margin-bottom: 16px;
+        margin-bottom: 10px;
+        
     }
     .btnBox:hover {
         margin-right: 8px;
@@ -497,7 +515,7 @@ h2 {
         width: 380px;
         height: 51px;
         margin-right: 30px;
-        margin-top: -8px;
+        margin-top: 0px;
         
     }
     .btn {
@@ -529,7 +547,7 @@ h2 {
        
     }
     .filters {
-        margin: 0;
+        margin-top: 10px;        
         padding: 0;
         justify-content: center;
         
