--- a/style.css
+++ b/style.css
@@ -206,17 +206,17 @@ body {
     margin-right: 12px;    
 }
 #middle {
-    display: flex;
-    flex-wrap: wrap-reverse;
-    justify-content: space-between;
+    display: flex; 
+    align-items: flex-end;
+    justify-content: space-between;    
+    border: 1px solid green;
     
 }
 .accomodation {
-    
-    height: auto;
+    border: 1px solid violet;    
     min-height: 625px ;
-    max-width: 878px;    
-    margin-left: 52px;
+    min-width: 878px;    
+    margin-left: 50px;
     margin-top: 22px;
     background-color: #f2f2f2;
     border-radius: 20px;
@@ -228,8 +228,8 @@ body {
 }
 .accomodation h1 {
     display: inline-block;/*pour appliquer une marge*/   
-    margin-left: 38px;
-    margin-top: 42px;
+    margin-left: 36px;
+    margin-top: 40px;
     font-size: 22px;
 
     
@@ -241,26 +241,16 @@ body {
 
 }
 .vignette__container {
+    margin-top: 2px;
     margin-left: 15px;
     margin-bottom: 30px;
     margin-right: 15px;       
     background-color: white;
     border-radius: 20px;
+    
+    
 }
-.vignette__container ul {
-    color: #0065FC;
-    display: flex;    
-    margin-top: 0;
-    padding-left: 0;
-    margin-left: 16px;
-}
-.vignette__container li {
-    list-style-type: none;
-    font-size: 0.7em;
-}
-.vignette__container li:last-child {
-    color: #f2f2f2;
-}
+
 
 .vignette__container a:visited {
     color: black;
@@ -268,7 +258,7 @@ body {
 .accomodation h2 {
     display: inline-block;
     font-size: 18px;
-    margin-top: 12px;
+    margin-top: 10px;
     margin-bottom: 45px;
     margin-left: 41px;
     font-weight: bold;
@@ -276,14 +266,16 @@ body {
 .vignette {
     height: 190px;
     width: 236px;
-    margin : 5px ;
     overflow: hidden;
+    margin : 5px ;
+    border-radius: 20px 20px 0px 0px ;
+    
     
 }
-.vignette img {    
-    width: 236px;
+.vignette img {  
+    width: 100%;      
     height: 118px;
-    border-radius: 20px 20px 0px 0px;
+    
 }
 .vignette h2 {
     margin: 0;
@@ -313,26 +305,73 @@ body {
     color: #f2f2f2;
 }
 #popular {
-    min-width: 420px;
-    width: auto;
-    height: auto;    
+    display: flex;
+    flex-direction: column;  
+    align-items: center;  
+    border: 1px solid blue;     
+    min-width: 420px;             
     min-height: 625px;
+    height: 625px;
     background-color: #f2f2f2;
     border-radius: 20px;
     margin-right: 49px;
+    margin-left: 35px;
+    
 }
 #head__popular {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    border : 1px solid blue;
+}
+#head__popular h1 {
+    margin-top :40px;
+    margin-left: 38px;
+    font-size: 22px;
+}
+#head__popular i {
+    margin-top: 41px;
+    margin-right: 38px;
+    font-size: 23px;
 }
 
 .popular__container {
     display: flex;
-    max-width: 342px;
+    width: 342px;
+    max-width: 90%;
     height: 145px;
     background-color: white;
-
+    margin-bottom: 28px;
+    border-radius: 20px;
+    margin-top: 5px;
 }
+.popular__container img{
+    width: 130px;
+    height: 135px;
+    margin: 5px;
+    object-fit:cover;
+    object-position: bottom ;
+    border-radius: 20px 0px 0px 20px;
+}
+
+.popular__description {
+    margin-left: 10px;
+}
+.popular__description h2 {
+    font-size: 15px;
+    margin-top: 16px;
+    margin-bottom: 0;
+}
+.popular__description p {
+    font-size: 14px;
+    margin-top: 10px;
+}
+#popular .stars {
+    margin: 0;
+    margin-top: 40px;
+    
+}
+
 
 
 
