--- a/media.css
+++ b/media.css
@@ -258,12 +258,42 @@
         justify-content: center;
     }
     .accomodation {
-        margin: 0;padding: 0;
+        margin-left: 0px;
         max-width: none;
         width: 90%;
+        background-color: white;
     }
+    .accomodation__container {
+        width: 100%;
+    }
+    .vignette__container {
+        width: 33%;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 1px 3px 15px #f5f5f5    ;
+        
+    }
+    .vignette {               
+        width: auto;
+           
+        
+    }
+    .vignette img {
+        margin: 0px;
+    }    
+
+
+
     #popular {
-        margin: 0;padding: 0;
+        margin: 0;
+        padding: 0;
         width: 90%;
+    }
+    #head__popular {
+        width: 80%;
+    }
+    .popular__container {
+        width: 70%;
+        box-shadow: 1px 3px 15px #e9e9e9
     }
 }
