--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ body {
     font-style: oblique;
     background-color: #DEEBFF;
     border: 2px solid #DEEBFF;
-    margin-right: 24px;
+    margin-right: 22px;
     color: #0065fc;
     margin-left: -2px;
     
@@ -209,11 +209,9 @@ body {
     display: flex; 
     align-items: flex-end;
     justify-content: space-between;    
-    border: 1px solid green;
     
 }
 .accomodation {
-    border: 1px solid violet;    
     min-height: 625px ;
     min-width: 878px;    
     margin-left: 50px;
@@ -249,6 +247,7 @@ body {
     border-radius: 20px;
     
     
+    
 }
 
 
@@ -268,7 +267,7 @@ body {
     width: 236px;
     overflow: hidden;
     margin : 5px ;
-    border-radius: 20px 20px 0px 0px ;
+    border-radius: 20px 20px  ;
     
     
 }
@@ -281,20 +280,20 @@ body {
     margin: 0;
     font-size: 16px;
     margin-top: 6px;
-    margin-left: 8px;
+    margin-left: 10px;
 }
 .vignette p {
     margin: 0;
     font-size: 14px;
     margin-top: 4px;
-    margin-left: 8px;
+    margin-left: 10px;
    
 }
 .stars {
     display: flex;
-    font-size: 0.65em;
+    font-size: 0.7em;
     margin-left: 10px;
-    margin-top: 8px;
+    margin-top: 6px;
     
 }
 .blueStars {
@@ -308,7 +307,6 @@ body {
     display: flex;
     flex-direction: column;  
     align-items: center;  
-    border: 1px solid blue;     
     min-width: 420px;             
     min-height: 625px;
     height: 625px;
@@ -322,11 +320,10 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    border : 1px solid blue;
 }
 #head__popular h1 {
     margin-top :40px;
-    margin-left: 38px;
+    margin-left: 34px;
     font-size: 22px;
 }
 #head__popular i {
@@ -349,6 +346,7 @@ body {
     width: 130px;
     height: 135px;
     margin: 5px;
+    
     object-fit:cover;
     object-position: bottom ;
     border-radius: 20px 0px 0px 20px;
@@ -371,7 +369,6 @@ body {
     margin-top: 40px;
     
 }
-
 
 
 
