--- a/media.css
+++ b/media.css
@@ -6,39 +6,39 @@
     }
     
   
-    .header {        
+    #header {        
         flex-wrap: wrap;
     }
   
-    .header__logo img{
+    #header__logo img{
         margin: 0;
         padding: 0;
         padding-left: 20px;
         padding-top: 22px;
         margin-bottom: 7px;
     }
-    .header__nav {        
+    #header__nav {        
         margin: 0;        
         padding: 0;
         width: 100%;
         
     }
-    .header__nav ul {
+    #header__nav ul {
         
         margin: 0;
         padding: 0;                
         justify-content: flex-end;
         
     }
-    .header__nav  li {
+    #header__nav  li {
         margin: 0;
         width: 50%;
         text-align: center;        
     }
-    .header__nav a:active {
+    #header__nav a:active {
         border-top: none;
     }
-    .header__nav ul li:nth-child(3){
+    #header__nav ul li:nth-child(3){
         order: -2;
         text-align: end;
         padding-right: 21px;        
@@ -46,23 +46,23 @@
         
             
     }
-    .header__nav li:nth-child(1){
+    #header__nav li:nth-child(1){
         margin-right: 50%;
         margin-top: 20px;
         border-bottom: 2px solid #f2f2f2;
         padding-bottom: 14px;
 
     }
-    .header__nav li:nth-child(2){
+    #header__nav li:nth-child(2){
         margin-top: -37px;
         padding-bottom: 14px;
         border-bottom: 2px solid #f2f2f2;
     }
-    .header__nav li:nth-child(1):active{
+    #header__nav li:nth-child(1):active{
         border-bottom: 4px solid #0065FC;
         padding-bottom: 12px;
     }
-    .header__nav li:nth-child(2):active{
+    #header__nav li:nth-child(2):active{
         border-bottom: 4px solid #0065FC;
         padding-bottom: 12px;
     }
@@ -166,18 +166,18 @@
         width: 100%;
         margin: auto;
     }
-    .header__logo img {
+    #header__logo img {
         margin-top: 35px;
         margin-left: 10px;
     }
-    .header__nav ul{
+    #header__nav ul{
         margin-right: 30px;
     }
     
 
    
     
-    .tablette {
+    #tablette {
         display: flex;
         justify-content: space-between;        
         align-items: center;
@@ -185,16 +185,15 @@
     }
     .premierParagraphe {
         margin: 0;
-        font-size: 0.75em;
+        font-size: 0.8em;
         margin-left: 10px;
         padding-top: 0;
         
         
 
     }
-    h1 {
-        margin: 0;
-    }
+
+    
     h2 {
         font-size: 1.2em;
     }
@@ -212,6 +211,7 @@
     }
     .search i {
         width: 51px;
+        height: 51px;
     }
     .search input {
         width: 80%;
@@ -270,7 +270,7 @@
         width: 33%;
         overflow: hidden;
         position: relative;
-        box-shadow: 1px 3px 15px #f5f5f5    ;
+        box-shadow: 1px 3px 15px #f5f5f2    ;
         
     }
     .vignette {               
