--- a/style.css
+++ b/style.css
@@ -70,24 +70,25 @@ body {
     padding-top: 47px;
 
 }
-.premierParagraphe{
+
+#premierParagraphe{
     margin-top: 35px;
     margin-left: 53px;
     width: auto;
     
     
 }
-.premierParagraphe h1 {
+#premierParagraphe h1 {
     font-size: 1.35em;
     
 }
-.premierParagraphe h2 {
+#premierParagraphe h2 {
     font-weight: normal;
     margin-top: -5px;
     font-size: 1em;
 }
 
-.search {    
+#search {    
 
     margin-top: 18px;
     display: flex;
@@ -95,7 +96,7 @@ body {
     width: 420px;
     
 }
-.search i{ 
+#search i{ 
     font-size: 1.2em;              
     border-radius: 15px 0px 0px 15px;
     width: 51px;
@@ -104,7 +105,7 @@ body {
     line-height: 51px;
     text-align: center;
 }
-.search input {
+#search input {
     padding-left: 16px;
     border: 1px solid #f2f2f2;
     font-weight: bold;
@@ -112,16 +113,16 @@ body {
     width: 230px;
     margin-right: -20px;    
 }
-.search input::placeholder {
+#search input::placeholder {
     color: black;
     font-size: 18px;
     opacity: 1;
 }
-.search input:focus {
+#search input:focus {
     border: 1px solid #f2f2f2;
     outline: none;
 }
-.search button {
+#search button {
     cursor: pointer;
     width: 134px;
     height: 51px;
@@ -132,7 +133,7 @@ body {
     background-color: #0065fc;
     font-size: 1.18em;
 }
-.loupe{    /*cache l'icone loupe*/
+#search .loupe{    /*cache l'icone loupe*/
     display: none;
 }
 .filters {
