--- a/media.css
+++ b/media.css
@@ -157,6 +157,52 @@
         margin-left: 36px;
         margin-top: 4px;
     }
+    #middle {
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+    }
+    .accomodation {
+        margin: 0;
+        min-width: 0;
+        width: 100%;
+        background-color: white;
+    }
+    .accomodation__container {
+        width: 100%;
+        margin: auto;
+        
+    }
+    .vignette__container {
+       
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 1px 3px 15px #f5f5f2    ;
+        
+    }
+    .vignette {
+        width: 100%;
+    }
+    #popular {
+        margin: 0;
+        margin-top: 20px;        
+        min-width: 100%;
+        border-radius: 0;
+        height: 582px;
+        
+        
+    }
+    #popular h1 {
+        margin-left: 20px;
+    }
+    .popular__container {
+        margin-bottom: 5px;
+        box-shadow: 3px 3px 10px #d9d9d9;
+        
+        
+        
+    }
+  
     
 
 }
