--- a/media.css
+++ b/media.css
@@ -156,6 +156,34 @@
         margin-left: 36px;
         margin-top: 4px;
     }
+    #middle {
+        flex-wrap: wrap-reverse;
+        justify-content: center;
+    }
+    #accomodation {
+        margin-left: 0px; 
+        min-width: 0;      
+        width: 100%;
+        background-color: white;
+    }
+    .accomodation__container {
+        width: 100%;
+    }
+    .vignette__container {
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        box-shadow: 1px 3px 15px #f5f5f2    ;
+        
+    }
+    .vignette {               
+        width: auto;
+           
+        
+    }
+    .vignette img {
+        margin: 0px;
+    }    
     
 
 }
