--- a/media.css
+++ b/media.css
@@ -114,13 +114,13 @@
 
        
     }
-    .filters {
+    #filters {
     margin-top: 18px;  
     margin-left: 2px;
     font-size: 1.1em;
     margin-bottom: 22px;
     }
-    .filters p {
+    #filters p {
         margin-left: 20px;
     }
     .btnFilters {
@@ -183,7 +183,20 @@
     }
     .vignette img {
         margin: 0px;
-    }    
+    }   
+    #popular {
+        min-width: 0;
+        width: 100%;
+        min-height: 0;
+        height: 578px ;
+        margin: 0;   
+        border-radius: 0;     
+
+    } 
+    .popular__container {
+        margin-bottom: 5px;
+    }
+    
     
 
 }
@@ -257,7 +270,7 @@
 
        
     }
-    .filters {
+    #filters {
         margin-top: 10px;        
         padding: 0;
         justify-content: center;
@@ -279,30 +292,45 @@
         flex-wrap: wrap-reverse;
         justify-content: center;
     }
+
     #accomodation {
-        margin-left: 0px;
-        max-width: none;
-        width: 90%;
+        margin-left: 0px;        
+        min-width: 0;
+        width: 100%;
         background-color: white;
+        margin: 0;
+
     }
+
+    #accomodation h1 {
+        margin: 10px;
+        margin-left: 55px;
+
+        
+    }
+
     .accomodation__container {
         width: 100%;
+        margin: 0;
     }
     .vignette__container {
-        width: 33%;
+        width: 40%;
+        margin: 10px;        
         overflow: hidden;
         position: relative;
-        box-shadow: 1px 3px 15px #f5f5f2    ;
+        box-shadow: 1px 3px 15px #f5f5f2;
         
     }
     .vignette {               
-        width: auto;
-           
+        width: auto;         
         
     }
     .vignette img {
         margin: 0px;
     }    
+    section h2 {
+        margin-left: 70px;
+    }
 
 
 
@@ -310,6 +338,7 @@
         margin: 0;
         padding: 0;
         width: 90%;
+       
     }
     #head__popular {
         width: 80%;
