--- a/media.css
+++ b/media.css
@@ -161,16 +161,20 @@
         justify-content: center;
     }
     #accomodation {
-        margin-left: 0px; 
+        margin: 0; 
         min-width: 0;      
         width: 100%;
         background-color: white;
+    }
+    #accomodation h1 {
+        margin-left: 20px;
     }
     .accomodation__container {
         width: 100%;
     }
     .vignette__container {
         width: 100%;
+        margin-bottom: 10px;
         overflow: hidden;
         position: relative;
         box-shadow: 1px 3px 15px #f5f5f2    ;
@@ -183,16 +187,25 @@
     }
     .vignette img {
         margin: 0px;
-    }   
+        width: 120%;
+    }  
+    section h2 {
+        margin-left: 20px;  
+        margin-top: px;
+    } 
     #popular {
         min-width: 0;
         width: 100%;
         min-height: 0;
         height: 578px ;
-        margin: 0;   
+        margin: 0;
+        margin-top: 20px;   
         border-radius: 0;     
 
     } 
+    #head__popular h1 {
+        margin-left: 20px;
+    }
     .popular__container {
         margin-bottom: 5px;
     }
