--- a/media.css
+++ b/media.css
@@ -191,7 +191,7 @@
     }  
     section h2 {
         margin-left: 20px;  
-        margin-top: px;
+        margin-top: 15px;
     } 
     #popular {
         min-width: 0;
@@ -209,7 +209,63 @@
     .popular__container {
         margin-bottom: 5px;
     }
-    
+    #activity {
+        width: 100%;
+        margin: 0;
+        margin-top: 10px;
+    }
+    #activity__h1 {
+        margin-top: 8px;
+        margin-left: 20px;
+    }
+    .activity__big {
+        width: 90%;
+        height: 190px;
+        margin-bottom: 22px;
+    }
+    .activity__big img {
+        height: 133px;
+    }
+    .activity__small {
+        width: 90%;
+        justify-content: flex-start;
+        height: auto;
+        margin-top: 5px;
+        margin-bottom: 20px
+    }
+    .activity__box {
+        width: 100%; 
+        margin-bottom: 20px;      
+        overflow: hidden;
+    }
+    .activity__small img {
+        height: 133px;
+    }
+    #pomegues {
+        height: 190px;
+    }
+    #pomegues img {
+        height: 133px;
+    }
+    #frioul {
+        margin: 0;
+        height: 190px;       
+    }
+    #frioul img {
+        height: 133px;
+    }
+    #NDDLG {
+    height: 190px;
+    }
+    #NDDLG img {
+        height: 133px;
+    }
+    #longchamp {
+        height: 190px;
+    }
+    #longchamp img {
+        height: 133px;
+    }
     
 
 }
