--- a/style.css
+++ b/style.css
@@ -238,15 +238,20 @@ body {
     display: flex;    
     flex-wrap: wrap;    
     justify-content: center;
+    
+    
 
 }
 .vignette__container {
     margin-top: 2px;
     margin-left: 15px;
     margin-bottom: 30px;
-    margin-right: 15px;       
+    margin-right: 15px;  
+    height: 200px;     
     background-color: white;
     border-radius: 20px;
+    box-shadow:1px 3px 15px #c0c0c0;
+    
     
     
 }
@@ -263,35 +268,37 @@ section h2 {
     font-weight: bold;
 }
 .vignette {
-    height: 190px;
+    height: 112px;
     width: 236px;
-    overflow: hidden;
+    overflow: hidden;    
     margin : 5px ;
-    border-radius: 20px 20px  ;
+    border-radius: 20px 20px 0px 0px ;
     
 }
 .vignette img {  
-    width: 100%;      
-    height: 118px;
+    width: 100%;  
+    height: 110%;
+    object-fit: cover;
     
 }
-.vignette h2 {
+.vignette__container h2 {
     margin: 0;
-    font-size: 16px;
-    margin-top: 6px;
-    margin-left: 10px;
+    font-size: 16px;   
+    margin-top: 4px; 
+    margin-left: 14px;
 }
-.vignette p {
+.vignette__container p {
     margin: 0;
     font-size: 14px;
     margin-top: 4px;
-    margin-left: 10px;
+    margin-left: 14px;
+    
    
 }
 .stars {
     display: flex;
     font-size: 0.7em;
-    margin-left: 10px;
+    margin-left: 14px;
     margin-top: 6px;
     
 }
@@ -336,6 +343,7 @@ section h2 {
     max-width: 90%;
     height: 145px;
     background-color: white;
+    box-shadow: 1px 3px 15px #c0c0c0;
     margin-bottom: 28px;
     border-radius: 20px;
     margin-top: 5px;
@@ -390,7 +398,7 @@ section h2 {
 .activity__box {
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: 1px 3px 15px #f5f5f2;
+    box-shadow: 1px 3px 15px #c0c0c0;
 }
 .activity__big {
     
