--- a/style.css
+++ b/style.css
@@ -406,7 +406,7 @@ section h2 {
     height: 447px;
     overflow: hidden;
     border-radius: 20px;
-    box-shadow: 1px 3px 15px #f5f5f2;
+    box-shadow: 1px 3px 15px #c0c0c0;
 }
 .activity__big img {
     height: 390px;
